# bevy-battle

./: .gitignore  Cargo.toml
assets/shaders/: outline.wgsl
crates/el/: Cargo.toml
crates/el/src/: el.rs  lib.rs
crates/stylesheet/: Cargo.toml
crates/stylesheet/src/: lib.rs
crates/stylesheet/src/classes/: colors.rs  display.rs  flex.rs  font.rs  height.rs  inset.rs  mod.rs  position.rs  space.rs  width.rs
crates/stylesheet/src/generate/: colors.rs  colors.txt  generate_colors.rs  generate_colors.txt  generate_space.rs  generate_space.txt  main.rs
game/: .gitignore  Cargo.toml
game/assets/characters/: player.char.toml  schema.json  thief.char.toml
game/assets/enemies/: schema.json  thief.enemy.toml
game/assets/shaders/: outline.wgsl
game/src/: main.rs
game/src/components/: mod.rs
game/src/helpers/: assets.rs  constants.rs  input_map.rs  mod.rs  shape.rs  states.rs
game/src/materials/: mod.rs  outline.rs
game/src/overworld/: mod.rs  startup_add_keymap.rs
game/src/scenes/: mod.rs
game/src/scenes/battle/: mod.rs
game/src/ui_events/: mod.rs
src/: main.rs  styles.rs
src/components/: mod.rs
src/helpers/: constants.rs  frame.rs  mod.rs
src/materials/: mod.rs
src/overworld/: input_read.rs  player_move.rs  startup_add_cameras.rs
src/stylesheet/: elements.rs  flex.rs  height.rs  inset.rs  mod.rs  position.rs  styles.rs  width.rs
src/systems/: animation_change_frame.rs  input_read.rs  mod.rs  player_move.rs  sort_y.rs  sprite_face_velocity.rs  startup_add_camera.rs  startup_add_cameras.rs  startup_add_keymap.rs  startup_add_player.rs
(+7 files in other folders)
