[package]
name = "stylesheet"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "^0.13.2", features = [
    "dynamic_linking",
    "asset_processor",
    "file_watcher",
] }
el = { workspace = true }

[[bin]]
name = "generate"
path = "src/generate/main.rs"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
