[package]
name = "stylesheet"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "^0.13.2", features = [] }
el = { workspace = true }
parse-display = "0.9.0"

[[bin]]
name = "generate"
path = "src/generate/main.rs"
